<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tips">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/back_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_iconfinder_left_arrow_back_2931162"
                android:tint="@color/light_blue"
                />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tips_title"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/tips"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/light_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/tips_title_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/tips_title_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/off_white">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="0dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="7.20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentOneTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wash_your_hands_frequently"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="@id/tipContentOne"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tipContentOne"
                        app:layout_constraintTop_toTopOf="@+id/tipContentOne"
                        app:layout_constraintVertical_bias="0.612"
                        app:srcCompat="@drawable/ic_hand_wash" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/tip_one_body"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView1"
                        app:layout_constraintStart_toStartOf="@id/tipContentOneTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tipContentOneTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="0dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="7.20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentTwoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maintain_social_distancing"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="@id/tipContentTwo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tipContentTwo"
                        app:layout_constraintTop_toTopOf="@+id/tipContentTwo"
                        app:layout_constraintVertical_bias="0.612"
                        app:srcCompat="@drawable/ic_social_distance" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentTwo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/social_distancing_body"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@id/tipContentTwoTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tipContentTwoTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="0dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="7.20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentThreeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avoid_touching_eyes_nose_and_mouth"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="@id/tipContentThree"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tipContentThree"
                        app:layout_constraintTop_toTopOf="@+id/tipContentThree"
                        app:layout_constraintVertical_bias="0.612"
                        app:srcCompat="@drawable/ic_dont_touch_eyes_n_nose" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentThree"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/hands_touch_many_surfaces_and_can_pick_up_viruses_once_contaminated_hands_can_transfer_the_virus_to_your_eyes_nose_or_mouth"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@id/tipContentThreeTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tipContentThreeTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="7.20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentFourTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/practice_respiratory_hygiene"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="0dp"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="@id/tipContentFour"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tipContentFour"
                        app:layout_constraintTop_toTopOf="@+id/tipContentFour"
                        app:layout_constraintVertical_bias="0.612"
                        app:srcCompat="@drawable/ic_elbow" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentFour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/good_respiratory_body"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="@id/tipContentFourTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tipContentFourTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                app:cardCornerRadius="5dp"
                app:cardElevation="7.20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentFiveTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seek_early_medical_care"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="5dp"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="@id/tipContentFive"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tipContentFive"
                        app:layout_constraintTop_toTopOf="@+id/tipContentFive"
                        app:layout_constraintVertical_bias="0.612"
                        app:srcCompat="@drawable/ic_doctor" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tipContentFive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="If you have a fever, cough and difficulty breathing, seek medical attention, call in advance and stay at home."
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView5"
                        app:layout_constraintStart_toStartOf="@id/tipContentFiveTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tipContentFiveTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>